--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "daisyui": "^1.25.4",
-    "vue": "^3.2.25"
+    "sweetalert2": "^11.4.0",
+    "vue": "^3.2.25",
+    "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
